updated new npm rc

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@benny-eleventy:registry=https://npm.pkg.github.com
+@benny-eleventy:registry=https://npm.pkg.github.com/
 //npm.pkg.github.com/:_authToken=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
